# auction-service

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  SPEC.md  auction-service.cabal
.claude/: settings.json
app/: Client.hs  Counter.hs  Main.hs
src/Api/: Types.hs
src/Api/Handler/: Auction.hs  Item.hs  User.hs
src/App/: Env.hs  Logger.hs  Monad.hs  Supervisor.hs
src/Client/: Session.hs
src/Domain/: Error.hs  Types.hs
src/State/: AppState.hs
test/: Spec.hs
test/Domain/: TypesSpec.hs
test/State/: BidSpec.hs
